// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`erp-excel-import-dialog renders correctly (file) 1`] = `
<div
  className="css-1iw6hgd-Overlay"
>
  <div
    className="css-1iw6hgd-Overlay"
  >
    <div>
      <div
        className="css-1b7zsin-Modal"
      >
        <header
          className="css-k2yokc-Modal"
        >
          <div
            className="css-1f6p2vj-Heading"
          >
            erp_excel_import__modal_title
          </div>
          <div
            className="css-12vbzj8-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
            onClick={[MockFunction]}
          />
        </header>
        <section
          className="css-1gs9x9w-Modal"
        >
          <div
            className="erp-excel-import-content css-pn74xz-ErpExcelImportDialog"
          >
            <div
              className="css-fmthw-Text"
            >
              erp_excel_import__modal_description
            </div>
            <div
              className="erp-excel-import-warning css-1wwxqf6-ErpExcelImportDialog"
            >
              <div
                className="css-ib1d72-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
              />
              <div
                className="css-1bcddy9-Text"
              >
                erp_excel_import__modal_warning
              </div>
            </div>
            <div
              className="css-p205rm-ErpExcelImportDialog"
            >
              <a
                className="css-a1cux6-ErpExcelImportDialog"
                data-testid="download-link"
                href="/backend/binary/erp/template"
              >
                <button
                  className="css-yjgg6o-Button"
                  disabled={false}
                  onClick={[Function]}
                >
                  <div
                    className="css-95j2hm-Button"
                  >
                    <div
                      className="css-kuxry5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    erp_excel_import__modal_download
                  </div>
                </button>
              </a>
            </div>
            <div
              className="erp-excel-import-file-content css-wzyg6s-ErpExcelImportDialog"
            >
              <div
                className="css-qcf7xd-Text"
              >
                erp_excel_import__modal_upload_title
              </div>
              <div
                className="css-1usu5nj-ErpExcelImportDialog"
              >
                <div>
                  <div
                    className="css-30ux8u-Paper"
                  >
                    <div
                      className="css-l0jg45-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1sbf56p-Text"
                    >
                      mock-file
                    </div>
                    <div
                      className="css-12vbzj8-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                      onClick={[Function]}
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
        <footer
          className="css-ukdqb3-Modal"
        >
          <button
            className="cancel-button css-a1i4d5-Button"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              cancel_button
            </div>
          </button>
          <button
            className="confirm-button css-1ex7tyh-Button"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              add_button
            </div>
          </button>
        </footer>
      </div>
    </div>
  </div>
</div>
`;

exports[`erp-excel-import-dialog renders correctly (loading) 1`] = `
<div
  className="css-1iw6hgd-Overlay"
>
  <div
    className="css-1iw6hgd-Overlay"
  >
    <div>
      <div
        className="css-1b7zsin-Modal"
      >
        <header
          className="css-k2yokc-Modal"
        >
          <div
            className="css-1f6p2vj-Heading"
          >
            erp_excel_import__modal_title
          </div>
          <div
            className="css-12vbzj8-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
            onClick={[MockFunction]}
          />
        </header>
        <section
          className="css-1gs9x9w-Modal"
        >
          <div
            className="erp-excel-import-content css-pn74xz-ErpExcelImportDialog"
          >
            <div
              className="css-fmthw-Text"
            >
              erp_excel_import__modal_description
            </div>
            <div
              className="erp-excel-import-warning css-1wwxqf6-ErpExcelImportDialog"
            >
              <div
                className="css-ib1d72-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
              />
              <div
                className="css-1bcddy9-Text"
              >
                erp_excel_import__modal_warning
              </div>
            </div>
            <div
              className="css-p205rm-ErpExcelImportDialog"
            >
              <a
                className="css-a1cux6-ErpExcelImportDialog"
                data-testid="download-link"
                href="/backend/binary/erp/template"
              >
                <button
                  className="css-yjgg6o-Button"
                  disabled={false}
                  onClick={[Function]}
                >
                  <div
                    className="css-95j2hm-Button"
                  >
                    <div
                      className="css-kuxry5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    erp_excel_import__modal_download
                  </div>
                </button>
              </a>
            </div>
            <div
              className="erp-excel-import-file-content css-wzyg6s-ErpExcelImportDialog"
            >
              <div
                className="css-qcf7xd-Text"
              >
                erp_excel_import__modal_upload_title
              </div>
              <div
                className="css-1usu5nj-ErpExcelImportDialog"
              >
                <div
                  className="file-dropzone-wrapper css-425dnf-FileDropzone"
                  onBlur={null}
                  onClick={[Function]}
                  onDragEnter={[Function]}
                  onDragLeave={[Function]}
                  onDragOver={[Function]}
                  onDrop={[Function]}
                  onFocus={null}
                  onKeyDown={null}
                  role="presentation"
                >
                  <input
                    accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,.xlsx"
                    multiple={false}
                    onChange={[Function]}
                    onClick={[Function]}
                    style={
                      {
                        "display": "none",
                      }
                    }
                    tabIndex={-1}
                    type="file"
                  />
                  <div
                    className="css-vq2l7y-Text"
                  >
                    <div
                      className="erp-excel-import-upload-indicator css-molqam-ErpExcelImportDialog"
                    >
                      <div
                        className="css-fmthw-Text"
                      >
                        erp_excel_import__modal_upload_check
                      </div>
                      <div
                        className="css-1e2w3lh-ContentLoadingIndicator"
                      >
                        <div
                          className="css-115v3hl-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
        <footer
          className="css-ukdqb3-Modal"
        >
          <button
            className="cancel-button css-a1i4d5-Button"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              cancel_button
            </div>
          </button>
          <button
            className="confirm-button css-1ex7tyh-Button"
            disabled={true}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              add_button
            </div>
          </button>
        </footer>
      </div>
    </div>
  </div>
</div>
`;

exports[`erp-excel-import-dialog renders correctly (upload failed) 1`] = `
<div
  className="css-1iw6hgd-Overlay"
>
  <div
    className="css-1iw6hgd-Overlay"
  >
    <div>
      <div
        className="css-1b7zsin-Modal"
      >
        <header
          className="css-k2yokc-Modal"
        >
          <div
            className="css-1f6p2vj-Heading"
          >
            erp_excel_import__modal_title
          </div>
          <div
            className="css-12vbzj8-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
            onClick={[MockFunction]}
          />
        </header>
        <section
          className="css-1gs9x9w-Modal"
        >
          <div
            className="erp-excel-import-content css-pn74xz-ErpExcelImportDialog"
          >
            <div
              className="css-fmthw-Text"
            >
              erp_excel_import__modal_description
            </div>
            <div
              className="erp-excel-import-warning css-1wwxqf6-ErpExcelImportDialog"
            >
              <div
                className="css-ib1d72-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
              />
              <div
                className="css-1bcddy9-Text"
              >
                erp_excel_import__modal_warning
              </div>
            </div>
            <div
              className="css-p205rm-ErpExcelImportDialog"
            >
              <a
                className="css-a1cux6-ErpExcelImportDialog"
                data-testid="download-link"
                href="/backend/binary/erp/template"
              >
                <button
                  className="css-yjgg6o-Button"
                  disabled={false}
                  onClick={[Function]}
                >
                  <div
                    className="css-95j2hm-Button"
                  >
                    <div
                      className="css-kuxry5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    erp_excel_import__modal_download
                  </div>
                </button>
              </a>
            </div>
            <div
              className="erp-excel-import-file-content css-wzyg6s-ErpExcelImportDialog"
            >
              <div
                className="css-qcf7xd-Text"
              >
                erp_excel_import__modal_upload_title
              </div>
              <div
                className="css-1rb77my-ErpExcelImportDialog"
              >
                <div>
                  <div
                    className="css-1u8git1-Paper"
                  >
                    <div
                      className="css-l0jg45-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1sbf56p-Text"
                    >
                      mock-file
                    </div>
                    <div
                      className="css-1sbf56p-Text"
                    >
                      erp_excel_import__modal_file_chip_error
                    </div>
                    <div
                      className="css-12vbzj8-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                      onClick={[Function]}
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="erp-excel-import-upload-error css-fpermn-ErpExcelImportDialog"
            >
              <div
                className="css-12x7gow-Text"
              >
                erp_excel_import__modal_upload_error: mock-error
              </div>
            </div>
          </div>
        </section>
        <footer
          className="css-ukdqb3-Modal"
        >
          <button
            className="cancel-button css-a1i4d5-Button"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              cancel_button
            </div>
          </button>
          <button
            className="confirm-button css-1ex7tyh-Button"
            disabled={true}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              add_button
            </div>
          </button>
        </footer>
      </div>
    </div>
  </div>
</div>
`;

exports[`erp-excel-import-dialog renders correctly (upload successful) 1`] = `
<div
  className="css-1iw6hgd-Overlay"
>
  <div
    className="css-1iw6hgd-Overlay"
  >
    <div>
      <div
        className="css-1b7zsin-Modal"
      >
        <header
          className="css-k2yokc-Modal"
        >
          <div
            className="css-1f6p2vj-Heading"
          >
            erp_excel_import__modal_title
          </div>
          <div
            className="css-12vbzj8-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
            onClick={[MockFunction]}
          />
        </header>
        <section
          className="css-1gs9x9w-Modal"
        >
          <div
            className="erp-excel-import-content css-pn74xz-ErpExcelImportDialog"
          >
            <div
              className="css-fmthw-Text"
            >
              erp_excel_import__modal_description
            </div>
            <div
              className="erp-excel-import-warning css-1wwxqf6-ErpExcelImportDialog"
            >
              <div
                className="css-ib1d72-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
              />
              <div
                className="css-1bcddy9-Text"
              >
                erp_excel_import__modal_warning
              </div>
            </div>
            <div
              className="css-p205rm-ErpExcelImportDialog"
            >
              <a
                className="css-a1cux6-ErpExcelImportDialog"
                data-testid="download-link"
                href="/backend/binary/erp/template"
              >
                <button
                  className="css-yjgg6o-Button"
                  disabled={false}
                  onClick={[Function]}
                >
                  <div
                    className="css-95j2hm-Button"
                  >
                    <div
                      className="css-kuxry5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    erp_excel_import__modal_download
                  </div>
                </button>
              </a>
            </div>
            <div
              className="erp-excel-import-file-content css-wzyg6s-ErpExcelImportDialog"
            >
              <div
                className="css-qcf7xd-Text"
              >
                erp_excel_import__modal_upload_title
              </div>
              <div
                className="css-1bsh2zz-ErpExcelImportDialog"
              >
                <div>
                  <div
                    className="css-30ux8u-Paper"
                  >
                    <div
                      className="css-l0jg45-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1sbf56p-Text"
                    >
                      mock-file
                    </div>
                    <div
                      className="css-12vbzj8-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                      onClick={[Function]}
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
        <footer
          className="css-ukdqb3-Modal"
        >
          <button
            className="cancel-button css-a1i4d5-Button"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              cancel_button
            </div>
          </button>
          <button
            className="confirm-button css-1ex7tyh-Button"
            disabled={true}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              add_button
            </div>
          </button>
        </footer>
      </div>
    </div>
  </div>
</div>
`;

exports[`erp-excel-import-dialog renders correctly 1`] = `
<div
  className="css-1iw6hgd-Overlay"
>
  <div
    className="css-1iw6hgd-Overlay"
  >
    <div>
      <div
        className="css-1b7zsin-Modal"
      >
        <header
          className="css-k2yokc-Modal"
        >
          <div
            className="css-1f6p2vj-Heading"
          >
            erp_excel_import__modal_title
          </div>
          <div
            className="css-12vbzj8-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
            onClick={[MockFunction]}
          />
        </header>
        <section
          className="css-1gs9x9w-Modal"
        >
          <div
            className="erp-excel-import-content css-pn74xz-ErpExcelImportDialog"
          >
            <div
              className="css-fmthw-Text"
            >
              erp_excel_import__modal_description
            </div>
            <div
              className="erp-excel-import-warning css-1wwxqf6-ErpExcelImportDialog"
            >
              <div
                className="css-ib1d72-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
              />
              <div
                className="css-1bcddy9-Text"
              >
                erp_excel_import__modal_warning
              </div>
            </div>
            <div
              className="css-p205rm-ErpExcelImportDialog"
            >
              <a
                className="css-a1cux6-ErpExcelImportDialog"
                data-testid="download-link"
                href="/backend/binary/erp/template"
              >
                <button
                  className="css-yjgg6o-Button"
                  disabled={false}
                  onClick={[Function]}
                >
                  <div
                    className="css-95j2hm-Button"
                  >
                    <div
                      className="css-kuxry5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    erp_excel_import__modal_download
                  </div>
                </button>
              </a>
            </div>
            <div
              className="erp-excel-import-file-content css-wzyg6s-ErpExcelImportDialog"
            >
              <div
                className="css-qcf7xd-Text"
              >
                erp_excel_import__modal_upload_title
              </div>
              <div
                className="css-1usu5nj-ErpExcelImportDialog"
              >
                <div
                  className="file-dropzone-wrapper css-425dnf-FileDropzone"
                  onBlur={null}
                  onClick={[Function]}
                  onDragEnter={[Function]}
                  onDragLeave={[Function]}
                  onDragOver={[Function]}
                  onDrop={[Function]}
                  onFocus={null}
                  onKeyDown={null}
                  role="presentation"
                >
                  <input
                    accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,.xlsx"
                    multiple={false}
                    onChange={[Function]}
                    onClick={[Function]}
                    style={
                      {
                        "display": "none",
                      }
                    }
                    tabIndex={-1}
                    type="file"
                  />
                  <div
                    className="css-vq2l7y-Text"
                  >
                    <div
                      className="erp-excel-import-upload-description css-molqam-ErpExcelImportDialog"
                    >
                      <div
                        className="css-fmthw-Text"
                      >
                        erp_excel_import__modal_upload_description
                      </div>
                      <div
                        className="css-fmthw-Text"
                      >
                        erp_excel_import__modal_upload_description_hint
                      </div>
                    </div>
                  </div>
                  <div
                    className="css-1oed4f3-Text"
                  >
                    files_and_directories__upload_modal_choose_file
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
        <footer
          className="css-ukdqb3-Modal"
        >
          <button
            className="cancel-button css-a1i4d5-Button"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              cancel_button
            </div>
          </button>
          <button
            className="confirm-button css-1ex7tyh-Button"
            disabled={true}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              add_button
            </div>
          </button>
        </footer>
      </div>
    </div>
  </div>
</div>
`;
